# ucm

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  README_zh.md  pyproject.toml  setup.py  ucm_patch.pth
ucm/: utils.py  (+4 more)
ucm/integration/mindie/: CMakeLists.txt  __init__.py  uc_utils.py  ucm_config.json  unifiedcache_mempool.py
ucm/integration/mindie/hash_mindie/: test_bench.py  uc_hash_ext.cpp
ucm/integration/mindie/patch/: __init__.py  boot_patch.py  prefix_cache_plugin.py
ucm/shared/infra/: CMakeLists.txt
ucm/shared/infra/logger/: CMakeLists.txt  logger.cc  logger.h
ucm/shared/infra/logger/cc/: compress_rotate_file_sink.h  spdlog_logger.cc  spdlog_logger.h
ucm/shared/infra/logger/cpy/: spdlog_logger.py.cc
ucm/shared/infra/status/: status.h
ucm/shared/infra/template/: hashset.h  singleton.h  spsc_ring_queue.h  timer.h  topn_heap.h
ucm/shared/infra/thread/: cpu_affinity.h  index_pool.h  latch.h  thread_pool.h
ucm/shared/infra/time/: now_time.h  stopwatch.h
ucm/shared/metrics/: CMakeLists.txt
ucm/shared/metrics/cc/api/: metrics_api.cc  metrics_api.h
ucm/shared/metrics/cc/domain/: metrics.cc  metrics.h
ucm/shared/metrics/cpy/: metrics.py.cc
ucm/shared/test/: CMakeLists.txt
ucm/shared/test/case/infra/: hashset_test.cc  spsc_ring_queue_test.cc  thread_pool_test.cc  topn_heap_test.cc
ucm/shared/test/case/metrics/: metrics_test.cc
ucm/shared/test/case/trans/: trans_test.cc
ucm/shared/test/example/metrics/: monitor_stats_example.py
ucm/shared/test/example/trans/: trans_on_cuda_example.py
ucm/shared/trans/: CMakeLists.txt  buffer.h  device.h  stream.h
ucm/shared/trans/ascend/: CMakeLists.txt  ascend_buffer.cc  ascend_buffer.h  ascend_device.cc  ascend_stream.cc  ascend_stream.h
ucm/shared/trans/cpy/: trans.py.cc
ucm/shared/trans/cuda/: CMakeLists.txt  cuda_buffer.cc  cuda_buffer.h  cuda_device.cc  cuda_sm_kernel.cu  cuda_sm_kernel.h  cuda_sm_stream.cc  cuda_sm_stream.h  cuda_stream.cc  cuda_stream.h
ucm/shared/trans/detail/: indexer.h  reserved_buffer.h
ucm/shared/trans/maca/: CMakeLists.txt  maca_sm_kernel.cu
ucm/shared/trans/simu/: CMakeLists.txt  simu_buffer.cc  simu_buffer.h  simu_device.cc  simu_stream.cc  simu_stream.h
ucm/sparse/esa/: CMakeLists.txt  esa.py
ucm/sparse/esa/retrieval/: CMakeLists.txt  retrieval_worker.py
ucm/sparse/esa/retrieval/cpy/: retrieval_backend.cpp
ucm/sparse/gsa/offload_ops/: CMakeLists.txt
ucm/sparse/gsa/offload_ops/include/: cal_kpre_and_topk.h
ucm/sparse/gsa/offload_ops/src/: cal_kpre_and_topk.cpp  select_topk_block.cpp
ucm/sparse/gsa/prefetch/: CMakeLists.txt  prefetch_engine.py
ucm/sparse/gsa/prefetch/include/: kvcache_log.h  kvcache_pre.h
ucm/sparse/gsa/prefetch/src/: kvcache_pre.cpp  pybinds.cpp
ucm/sparse/kvstar/retrieve/: CMakeLists.txt
ucm/sparse/kvstar/retrieve/core/: CMakeLists.txt
ucm/sparse/kvstar/retrieve/py_intf/: CMakeLists.txt  py_intf.cpp
ucm/store/: CMakeLists.txt  factory.py  factory_v1.py  ucmstore.h  ucmstore.py  ucmstore_v1.h  ucmstore_v1.py
ucm/store/cache/: CMakeLists.txt
ucm/store/cache/cc/: buffer_manager.h  cache_store.cc  copy_stream.h  dump_queue.cc  dump_queue.h  global_config.h  load_queue.cc  load_queue.h  posix_shm.h  trans_buffer.cc  trans_buffer.h  trans_manager.h  trans_task.h
ucm/store/detail/: CMakeLists.txt
ucm/store/detail/task/: task_manager.h  task_queue.h  task_set.h  task_shard.h  task_waiter.h
ucm/store/detail/template/: task_wrapper.h
ucm/store/detail/type/: dictionary.h  types.h
ucm/store/ds3fs/: CMakeLists.txt
ucm/store/ds3fs/cc/: ds3fs_file.cc  ds3fs_file.h  ds3fs_store.cc  ds3fs_store.h  global_config.h  space_layout.cc  space_layout.h  space_manager.cc  space_manager.h  trans_manager.h  trans_queue.cc  trans_queue.h  trans_task.h
ucm/store/empty/: CMakeLists.txt
ucm/store/empty/cc/: empty_store.cc
ucm/store/fake/: CMakeLists.txt
ucm/store/fake/cc/: fake_store.cc  global_config.h  meta_manager.cc  meta_manager.h  posix_shm.h
ucm/store/mooncakestore/: mooncake_connector.py
ucm/store/nfsstore/: CMakeLists.txt  nfsstore_connector.py
ucm/store/nfsstore/cc/api/: nfsstore.cc  nfsstore.h
ucm/store/nfsstore/cpy/: nfsstore.py.cc
ucm/store/nfsstore/device/: CMakeLists.txt  ibuffered_device.h  idevice.h
ucm/store/nfsstore/device/ascend/: CMakeLists.txt  ascend_device.cc
ucm/store/nfsstore/device/cuda/: CMakeLists.txt  cuda_device.cu
ucm/store/nfsstore/device/maca/: CMakeLists.txt  maca_device.cu
ucm/store/nfsstore/device/musa/: CMakeLists.txt  musa_device.cc  musa_device.mu
ucm/store/nfsstore/device/simu/: CMakeLists.txt  simu_device.cc
ucm/store/pcstore/: CMakeLists.txt  pcstore_connector.py  pcstore_connector_v1.py
ucm/store/pcstore/cc/api/: pcstore.cc  pcstore.h
ucm/store/pcstore/cpy/: pcstore.py.cc
ucm/store/pipeline/: CMakeLists.txt  connector.py
ucm/store/pipeline/cpy/: config_parser.h  library_loader.h  pipeline_store.py.cc
ucm/store/posix/: CMakeLists.txt
ucm/store/posix/cc/: aio_impl.cc  aio_impl.h  block_operator.h  global_config.h  hotness_tracker.cc  hotness_tracker.h  io_engine_aio.h  io_engine_psync.h  posix_file.cc  posix_file.h  posix_store.cc  shard_gc.cc  shard_gc.h  space_layout.cc  space_layout.h  space_manager.cc  space_manager.h  trans_manager.h  trans_queue.cc  trans_queue.h  trans_task.h
ucm/store/test/: CMakeLists.txt
ucm/store/test/case/cache/: cache_buffer_manager_test.cc  cache_dump_queue_test.cc  cache_load_queue_test.cc  cache_posix_shm_test.cc  cache_trans_buffer_test.cc  cache_trans_manager_test.cc
ucm/store/test/case/detail/: data_generator.h  mock_store.h  path_base.h  random.h  types_helper.h
ucm/store/test/e2e/: cache_layer_chunk_test.py  cache_on_empty_mp_test.py  cache_on_empty_test.py  cache_on_posix_test.py  cache_variable_length_tensor_test.py  ds3fs_test.py  nfsstore_embed.py  nfsstore_embed_fetch.py  nfsstore_embed_fetch_run.py  nfsstore_fetch.py  pcstore_embed.py  pcstore_embed_v1.py  pcstore_fetch.py  posixstore_aio_test.py  posixstore_embed.py  posixstore_gc_test.py
(+356 files in other folders)
