add_subdirectory(detail)
add_library(storeintf INTERFACE)
target_include_directories(storeintf INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
target_link_libraries(storeintf INTERFACE storedetail infra_status)
add_subdirectory(nfsstore)
add_subdirectory(pcstore)
add_subdirectory(ds3fs)
add_subdirectory(cache)
add_subdirectory(empty)
add_subdirectory(fake)
add_subdirectory(mooncakestore)
add_subdirectory(pipeline)
add_subdirectory(posix)
add_subdirectory(test)
