file(GLOB_RECURSE UCM_EMPTY_STORE_CC_SOURCE_FILES "./cc/*.cc")
add_library(emptystore SHARED ${UCM_EMPTY_STORE_CC_SOURCE_FILES})
target_include_directories(emptystore PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/cc)
target_link_libraries(emptystore PUBLIC storeintf)
file(RELATIVE_PATH INSTALL_REL_PATH ${UCM_ROOT_DIR} ${CMAKE_CURRENT_SOURCE_DIR})
install(TARGETS emptystore LIBRARY DESTINATION ${INSTALL_REL_PATH} COMPONENT ucm)
